# Dora

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
dora/api/: response.py
dora/api/gpt/: __init__.py
dora/api/tools/: example.py
dora/persona/: basic.py
dora/tools/: files.py  numbers.py  web_scrape.py
dora/ui/: app.py
dora/ui/static/css/: dora-dark-overhaul.css
dora/ui/templates/: chat.html
tests/: __init__.py  conftest.py  test_gpt_response.py  test_persona.py
tests/tools/: test_file_writer.py  test_mix_integers.py  test_web_scrape.py
